--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "code",
    "source": [
     "# Loading the dataset\n",
-    "loan = pd.read_csv('train.csv')\n",
+    "loan = pd.read_csv('../train.csv')\n",
     "print(f'There are {loan.shape[0]} rows and {loan.shape[1]} columns')\n",
     "loan.head() # getting the first the 5 rows"
    ],
